--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -1,68 +1,51 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
-  <link rel="icon" href="/favicon.png">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color:#f4f6f8; display:flex; justify-content:center; padding:20px; }
-    .form-wrapper { width:100%; max-width:600px; }
-    form { position:relative; background:#fff; padding:30px 40px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
-    h2 { text-align:center; margin-bottom:20px; }
-    label { margin-top:15px; display:block; font-weight:600; }
-    input, textarea, select { width:100%; padding:10px; border-radius:6px; border:1px solid #ccc; font-size:16px; box-sizing:border-box; background:#fff; color:#000; }
-    select:disabled { background:#f4f6f8; color:#555; cursor:not-allowed; }
-    textarea { min-height:80px; }
-    button[type="submit"] { margin-top:20px; width:100%; padding:12px; background:#4CAF50; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; }
-    button[type="submit"]:hover { background:#45a049; }
-    #close-btn { position:absolute; top:12px; right:12px; background:transparent; border:none; font-size:26px; font-weight:bold; cursor:pointer; color:#666; line-height:1; }
-    #close-btn:hover { color:#000; }
-    #result { margin-top:15px; padding:10px; text-align:center; font-weight:bold; }
-    .error { background:#f44336; color:#fff; }
-    #loading { display:none; text-align:center; margin-top:10px; font-weight:bold; }
-    .rodo-label { display:flex; align-items:center; margin-top:15px; font-weight:normal; font-size:14px; }
-    .rodo-label input[type="checkbox"] { margin-right:10px; accent-color:orange; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<style>
+body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#f4f6f8; display:flex; justify-content:center; padding:20px; }
+.form-wrapper { width:100%; max-width:600px; }
+form { position:relative; background:#fff; padding:30px 40px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
+h2 { text-align:center; margin-bottom:20px; }
+label { margin-top:15px; display:block; font-weight:600; }
+input, textarea, select { width:100%; padding:10px; border-radius:6px; border:1px solid #ccc; font-size:16px; box-sizing:border-box; background:#fff; color:#000; }
+select:disabled { background:#f4f6f8; color:#555; cursor:not-allowed; }
+textarea { min-height:80px; }
+button[type="submit"] { margin-top:20px; width:100%; padding:12px; background:#4CAF50; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; }
+button[type="submit"]:hover { background:#45a049; }
+#close-btn { position:absolute; top:12px; right:12px; background:transparent; border:none; font-size:26px; font-weight:bold; cursor:pointer; color:#666; line-height:1; }
+#close-btn:hover { color:#000; }
+#result { margin-top:15px; padding:10px; text-align:center; font-weight:bold; }
+.error { background:#f44336; color:#fff; }
+#loading { display:none; text-align:center; margin-top:10px; font-weight:bold; }
+.rodo-label { display:flex; align-items:center; margin-top:15px; font-weight:normal; font-size:14px; }
+.rodo-label input[type="checkbox"] { margin-right:10px; accent-color:orange; }
+</style>
 </head>
 <body>
+
 <div class="form-wrapper">
 <form id="register-form">
-  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
+  <button type="button" id="close-btn">❌</button>
   <h2 id="form-title">Rejestracja</h2>
 
-  <label>Imię</label>
-  <input id="imie" required oninput="this.value=this.value.toUpperCase()">
-  <label>Nazwisko</label>
-  <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
-  <label>Województwo</label>
-  <select id="wojewodztwo" required>
-    <option value="">— wybierz województwo —</option>
-  </select>
-  <label>Miasto</label>
-  <select id="miasto" required disabled>
-    <option value="">— wybierz miasto —</option>
-  </select>
-  <label>Nr upr. EKSPLOATACJA</label>
-  <textarea id="nrE"></textarea>
-  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
-  <textarea id="nrEPomiary"></textarea>
-  <label>Nr upr. DOZÓR</label>
-  <textarea id="nrD"></textarea>
-  <label>Email</label>
-  <input id="email" required>
-  <label>Telefon</label>
-  <input id="telefon">
-  <label>Zajmuje się</label>
-  <textarea id="zajmujeSie"></textarea>
-  <label>Załącz skan uprawnień</label>
-  <input type="file" id="plik" multiple>
-  <label class="rodo-label">
-    <input type="checkbox" id="rodo" required>
-    Wyrażam zgodę na przetwarzanie moich danych osobowych…
-  </label>
+  <label>Imię</label><input id="imie" required oninput="this.value=this.value.toUpperCase()">
+  <label>Nazwisko</label><input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
+  <label>Województwo</label><select id="wojewodztwo" required><option value="">— wybierz województwo —</option></select>
+  <label>Miasto</label><select id="miasto" required disabled><option value="">— wybierz miasto —</option></select>
+  <label>Nr upr. EKSPLOATACJA</label><textarea id="nrE"></textarea>
+  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label><textarea id="nrEPomiary"></textarea>
+  <label>Nr upr. DOZÓR</label><textarea id="nrD"></textarea>
+  <label>Email</label><input id="email" required>
+  <label>Telefon</label><input id="telefon">
+  <label>Zajmuje się</label><textarea id="zajmujeSie"></textarea>
+  <label>Załącz skan uprawnień</label><input type="file" id="plik" multiple>
+  <label class="rodo-label"><input type="checkbox" id="rodo" required>Wyrażam zgodę na przetwarzanie danych…</label>
   <button type="submit" id="submit-btn">Zarejestruj</button>
+
   <div id="loading">Zapisywanie danych...</div>
   <div id="result"></div>
 </form>
@@ -73,7 +56,7 @@ import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 
 const supabase = createClient(
   'https://tfbqqduxtsacvwfigsvt.supabase.co',
-  'PUBLIC_ANON_KEY'
+  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
 )
 
 const form = document.getElementById('register-form')
@@ -82,16 +65,15 @@ const miastoSelect = document.getElementById('miasto')
 const loading = document.getElementById('loading')
 const result = document.getElementById('result')
 
-let currentUser = null
-
 const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
+let currentUser = null
 
 // -------------------- Ładowanie województw --------------------
 async function loadWojewodztwa() {
   const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
   if (error) return
   wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
-  data.forEach(w => { const option = document.createElement('option'); option.value=w.id; option.textContent=w.nazwa; wojSelect.appendChild(option)})
+  data.forEach(w => { const option=document.createElement('option'); option.value=w.id; option.textContent=w.nazwa; wojSelect.appendChild(option) })
 }
 
 // -------------------- Ładowanie miast --------------------
@@ -101,12 +83,13 @@ wojSelect.addEventListener('change', async () => {
   miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
   if (!wojId) return
   const { data } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
-  data.forEach(m => { const option = document.createElement('option'); option.value=m.id; option.textContent=m.nazwa; miastoSelect.appendChild(option) })
+  data.forEach(m => { const option=document.createElement('option'); option.value=m.id; option.textContent=m.nazwa; miastoSelect.appendChild(option) })
 })
 
 // -------------------- INIT --------------------
 document.addEventListener('DOMContentLoaded', async () => {
   await loadWojewodztwa()
+
   const { data: { user } } = await supabase.auth.getUser()
   if (!user) return window.location.href='index.html'
   currentUser = user
@@ -117,9 +100,9 @@ document.addEventListener('DOMContentLoaded', async () => {
   if (data) {
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
-    fields.forEach(f => { if (data[f]) document.getElementById(f).value = data[f] })
+    fields.forEach(f => { if(data[f]) document.getElementById(f).value = data[f] })
     if (data.wojewodztwo) wojSelect.value = data.wojewodztwo
-    if (data.miasto) miastoSelect.disabled = false; miastoSelect.value = data.miasto
+    if (data.miasto) { miastoSelect.disabled=false; miastoSelect.value = data.miasto }
   }
 })
 
@@ -128,27 +111,19 @@ form.addEventListener('submit', async e => {
   e.preventDefault()
   loading.style.display='block'; result.textContent=''
 
-  const payload = {
-    imie: document.getElementById('imie').value,
-    nazwisko: document.getElementById('nazwisko').value,
-    wojewodztwo: wojSelect.value,
-    miasto: miastoSelect.value,
-    nrE: document.getElementById('nrE').value,
-    nrEPomiary: document.getElementById('nrEPomiary').value,
-    nrD: document.getElementById('nrD').value,
-    email: document.getElementById('email').value,
-    telefon: document.getElementById('telefon').value,
-    zajmujeSie: document.getElementById('zajmujeSie').value
-  }
+  const payload = {}
+  fields.forEach(f => { payload[f] = document.getElementById(f).value })
+  payload.email = document.getElementById('email').value
 
   const { error } = await supabase.from('tabela_elektrykow').insert(payload)
   loading.style.display='none'
-  if (error) { result.textContent=error.message; result.className='error'; return }
+  if(error){ result.textContent=error.message; result.className='error'; return }
   result.textContent='Dane zapisane poprawnie'
 })
 
 // -------------------- ZAMKNIJ --------------------
 document.getElementById('close-btn').addEventListener('click', () => { window.location.href='https://orep.pl/' })
 </script>
+
 </body>
 </html>
