--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -1,49 +1,176 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<style>
-body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#f4f6f8; display:flex; justify-content:center; padding:20px; }
-.form-wrapper { width:100%; max-width:600px; }
-form { position:relative; background:#fff; padding:30px 40px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
-h2 { text-align:center; margin-bottom:20px; }
-label { margin-top:15px; display:block; font-weight:600; }
-input, textarea, select { width:100%; padding:10px; border-radius:6px; border:1px solid #ccc; font-size:16px; box-sizing:border-box; background:#fff; color:#000; }
-select:disabled { background:#f4f6f8; color:#555; cursor:not-allowed; }
-textarea { min-height:80px; }
-button[type="submit"] { margin-top:20px; width:100%; padding:12px; background:#4CAF50; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; }
-button[type="submit"]:hover { background:#45a049; }
-#close-btn { position:absolute; top:12px; right:12px; background:transparent; border:none; font-size:26px; font-weight:bold; cursor:pointer; color:#666; line-height:1; }
-#close-btn:hover { color:#000; }
-#result { margin-top:15px; padding:10px; text-align:center; font-weight:bold; }
-.error { background:#f44336; color:#fff; }
-#loading { display:none; text-align:center; margin-top:10px; font-weight:bold; }
-.rodo-label { display:flex; align-items:center; margin-top:15px; font-weight:normal; font-size:14px; }
-.rodo-label input[type="checkbox"] { margin-right:10px; accent-color:orange; }
-</style>
-</head>
-<body>
+  <link rel="icon" href="/favicon.png">
+  <meta name="robots" content="noindex, nofollow">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+      margin: 0;
+    }
+
+    .form-wrapper {
+      width: 100%;
+      max-width: 600px;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
+
+    form {
+      position: relative;
+      background-color: #fff;
+      padding: 20px 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+    }
+
+    h2 { text-align: center; margin-bottom: 20px; font-size: 22px; }
+
+    label {
+      margin-top: 15px;
+      display: block;
+      font-weight: 600;
+      font-size: 14px;
+    }
+
+    input, textarea, select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      box-sizing: border-box;
+      background-color: #fff;
+      color: #000;
+    }
+
+    input[readonly] { background-color: #f4f6f8; cursor: not-allowed; }
+    input[type="tel"] { ime-mode: disabled; }
+
+    select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
+    select:not(:disabled) { background-color: #fff; color: #000; }
+
+    select { height: 42px; }
+
+    textarea { min-height: 80px; }
+
+    button[type="submit"] {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button[type="submit"]:hover { background: #45a049; }
+
+    #close-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: transparent;
+      border: none;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #666;
+      line-height: 1;
+    }
+    #close-btn:hover { color: #000; }
+
+    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+    .error { background: #f44336; color: #fff; }
+    #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
+
+    .rodo-label {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      margin-top: 15px;
+      font-weight: normal;
+      font-size: 14px;
+      gap: 10px;
+    }
+    .rodo-label input[type="checkbox"] { margin-top: 2px; accent-color: orange; }
+
+    /* RESPONSYWNOŚĆ */
+    @media (max-width: 480px) {
+      form {
+        padding: 15px 15px;
+      }
+      h2 { font-size: 20px; }
+      input, textarea, select { font-size: 15px; }
+      .rodo-label { font-size: 13px; }
+      #close-btn { font-size: 24px; top: 8px; right: 8px; }
+    }
+  </style>
+</head>
+
+<body>
 <div class="form-wrapper">
 <form id="register-form">
-  <button type="button" id="close-btn">❌</button>
+
+  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
+
   <h2 id="form-title">Rejestracja</h2>
 
-  <label>Imię</label><input id="imie" required oninput="this.value=this.value.toUpperCase()">
-  <label>Nazwisko</label><input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
-  <label>Województwo</label><select id="wojewodztwo" required><option value="">— wybierz województwo —</option></select>
-  <label>Miasto</label><select id="miasto" required disabled><option value="">— wybierz miasto —</option></select>
-  <label>Nr upr. EKSPLOATACJA</label><textarea id="nrE"></textarea>
-  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label><textarea id="nrEPomiary"></textarea>
-  <label>Nr upr. DOZÓR</label><textarea id="nrD"></textarea>
-  <label>Email</label><input id="email" required>
-  <label>Telefon</label><input id="telefon">
-  <label>Zajmuje się</label><textarea id="zajmujeSie"></textarea>
-  <label>Załącz skan uprawnień</label><input type="file" id="plik" multiple>
-  <label class="rodo-label"><input type="checkbox" id="rodo" required>Wyrażam zgodę na przetwarzanie danych…</label>
+  <label>Imię</label>
+  <input id="imie" required oninput="this.value=this.value.toUpperCase()">
+
+  <label>Nazwisko</label>
+  <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
+
+  <label for="wojewodztwo">Województwo</label>
+  <select id="wojewodztwo" required>
+    <option value="">— wybierz województwo —</option>
+  </select>
+
+  <label for="miasto">Miasto</label>
+  <select id="miasto" required disabled>
+    <option value="">— wybierz miasto —</option>
+  </select>
+
+  <label>Nr upr. EKSPLOATACJA</label>
+  <textarea id="nrE"></textarea>
+
+  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
+  <textarea id="nrEPomiary"></textarea>
+
+  <label>Nr upr. DOZÓR</label>
+  <textarea id="nrD"></textarea>
+
+  <label>Email</label>
+  <input id="email" readonly>
+
+  <label>Telefon</label>
+  <input id="telefon" type="tel">
+
+  <label>Zajmuje się</label>
+  <textarea id="zajmujeSie"></textarea>
+
+  <label>Załącz skan uprawnień</label>
+  <input type="file" id="plik" multiple>
+
+  <label class="rodo-label">
+    <input type="checkbox" id="rodo" required>
+    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+  </label>
+
   <button type="submit" id="submit-btn">Zarejestruj</button>
 
   <div id="loading">Zapisywanie danych...</div>
@@ -54,86 +181,194 @@ button[type="submit"]:hover { background:#45a049; }
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
+// Twój Supabase
 const supabase = createClient(
   'https://tfbqqduxtsacvwfigsvt.supabase.co',
   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
 )
 
-const form = document.getElementById('register-form')
-const wojSelect = document.getElementById('wojewodztwo')
-const miastoSelect = document.getElementById('miasto')
-const loading = document.getElementById('loading')
-const result = document.getElementById('result')
-const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
-
 let currentUser = null
-let currentRecordId = null
 
-// -------------------- Ładowanie województw --------------------
-async function loadWojewodztwa() {
-  const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
-  if (error) return
+const fields = [
+  'imie','nazwisko','miasto','wojewodztwo',
+  'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
+]
+
+async function loadWojewodztwa(selectedWoj = null) {
+  const { data, error } = await supabase
+    .from('wojewodztwa')
+    .select('id, nazwa')
+    .order('nazwa')
+  if (error) { console.error('Błąd ładowania województw:', error); return }
+
+  const wojSelect = document.getElementById('wojewodztwo')
   wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
-  data.forEach(w => { const o=document.createElement('option'); o.value=w.id; o.textContent=w.nazwa; wojSelect.appendChild(o) })
+  data.forEach(w => {
+    const option = document.createElement('option')
+    option.value = w.id
+    option.textContent = w.nazwa
+    wojSelect.appendChild(option)
+  })
+  if (selectedWoj) {
+    wojSelect.value = selectedWoj
+    wojSelect.dispatchEvent(new Event('change'))
+  }
 }
 
-// -------------------- Ładowanie miast --------------------
-wojSelect.addEventListener('change', async () => {
-  const wojId = wojSelect.value
-  miastoSelect.disabled = !wojId
+document.getElementById('wojewodztwo').addEventListener('change', async function() {
+  const wojId = this.value
+  const miastoSelect = document.getElementById('miasto')
+  if (!wojId) {
+    miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
+    miastoSelect.disabled = true
+    return
+  }
+  const { data, error } = await supabase
+    .from('miasta')
+    .select('id, nazwa')
+    .eq('wojewodztwo_id', wojId)
+    .order('nazwa')
+  if (error) { console.error('Błąd ładowania miast:', error); return }
   miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-  if (!wojId) return
-  const { data } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
-  data.forEach(m => { const o=document.createElement('option'); o.value=m.id; o.textContent=m.nazwa; miastoSelect.appendChild(o) })
+  data.forEach(m => {
+    const option = document.createElement('option')
+    option.value = m.id
+    option.textContent = m.nazwa
+    miastoSelect.appendChild(option)
+  })
+  miastoSelect.disabled = false
 })
 
-// -------------------- INIT --------------------
-document.addEventListener('DOMContentLoaded', async () => {
-  await loadWojewodztwa()
-  const { data: { user } } = await supabase.auth.getUser()
-  if (!user) return window.location.href='index.html'
-  currentUser = user
-  document.getElementById('email').value = user.email
+document.getElementById('close-btn').addEventListener('click', () => {
+  window.location.href = 'https://orep.pl/';
+})
 
-  // Sprawdź czy rekord istnieje
-  const { data } = await supabase.from('tabela_elektrykow').select('*').eq('email', user.email).single()
+// --- Pobranie bieżącego użytkownika i wstępne wypełnienie formularza ---
+document.addEventListener('DOMContentLoaded', async () => {
+  const { data: { user } } = await supabase.auth.getUser()
+  if (!user) return
+  currentUser = user
+  email.value = user.email
+
+  const { data } = await supabase
+    .from('tabela_elektrykow')
+    .select('*')
+    .eq('email', user.email)
+    .single()
+
   if (data) {
-    currentRecordId = data.id
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
-    fields.forEach(f => { if(data[f]) document.getElementById(f).value = data[f] })
-    if (data.wojewodztwo) wojSelect.value = data.wojewodztwo
-    if (data.miasto) { miastoSelect.disabled=false; miastoSelect.value=data.miasto }
-  }
-})
-
-// -------------------- SUBMIT --------------------
-form.addEventListener('submit', async e => {
-  e.preventDefault()
-  loading.style.display='block'; result.textContent=''
-
-  const payload = {}
-  fields.forEach(f => { payload[f] = document.getElementById(f).value })
-  payload.email = document.getElementById('email').value
-
-  let error = null
-  if (currentRecordId) {
-    // UPDATE
-    const { error: err } = await supabase.from('tabela_elektrykow').update(payload).eq('id', currentRecordId)
-    error = err
+    fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
+    if (data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
+    if (data.miasto) document.getElementById('miasto').value = data.miasto
   } else {
-    // INSERT
-    const { error: err } = await supabase.from('tabela_elektrykow').insert(payload)
-    error = err
+    loadWojewodztwa()
   }
-
-  loading.style.display='none'
-  if(error){ result.textContent=error.message; result.className='error'; return }
-  result.textContent='Dane zapisane poprawnie'
 })
 
-// -------------------- ZAMKNIJ --------------------
-document.getElementById('close-btn').addEventListener('click', () => { window.location.href='https://orep.pl/' })
+// --- FUNKCJA WYSYŁAJĄCA MAGIC EMAIL ---
+async function wyslijMagicEmail(email) {
+  try {
+    const res = await fetch('https://orep.pl/api/magic-mail', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ email })
+    });
+    const data = await res.json();
+    if (!data.ok) {
+      console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd');
+    }
+  } catch(err) {
+    console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err);
+  }
+}
+
+// --- OBSŁUGA SUBMIT FORMULARZA ---
+document.getElementById('register-form').addEventListener('submit', async e => {
+  e.preventDefault()
+  loading.style.display = 'block'
+  result.textContent = ''
+  result.className = ''
+
+  // --- WALIDACJA nrE / nrEPomiary / nrD ---
+  if (nrE.value && nrEPomiary.value) {
+    loading.style.display = 'none'
+    result.textContent = 'Wybierz tylko jeden rodzaj eksploatacji'
+    result.className = 'error'
+    return
+  }
+  if (nrD.value && !nrEPomiary.value) {
+    loading.style.display = 'none'
+    result.textContent = 'Do DOZORU wymagane są pomiary'
+    result.className = 'error'
+    return
+  }
+
+  // --- WALIDACJA PLIKU ---
+  const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png']
+  const maxSize = 5 * 1024 * 1024 // 5MB
+  for (let i = 0; i < plik.files.length; i++) {
+    const file = plik.files[i]
+    if (!allowedTypes.includes(file.type)) {
+      loading.style.display = 'none'
+      result.textContent = 'Nieprawidłowy typ pliku. Dozwolone: PDF, JPG, PNG'
+      result.className = 'error'
+      return
+    }
+    if (file.size > maxSize) {
+      loading.style.display = 'none'
+      result.textContent = 'Plik zbyt duży. Maksymalny rozmiar: 5 MB'
+      result.className = 'error'
+      return
+    }
+  }
+
+  // --- UPLOAD PLIKÓW ---
+  let plikUrls = []
+  for (let i = 0; i < plik.files.length; i++) {
+    const file = plik.files[i]
+  const path = `${currentUser.id}/${Date.now()}_${file.name}`
+
+    const { error: uploadError } = await supabase.storage.from('uprawnienia').upload(path, file, { upsert: true })
+    if (uploadError) {
+      loading.style.display = 'none'
+      result.textContent = 'Błąd wysyłania pliku: ' + uploadError.message
+      result.className = 'error'
+      return
+    }
+    const { data: urlData, error: urlError } = await supabase.storage.from('uprawnienia').createSignedUrl(path, 3600)
+    if (urlError) {
+      loading.style.display = 'none'
+      result.textContent = 'Błąd generowania linku do pliku'
+      result.className = 'error'
+      return
+    }
+    plikUrls.push(urlData.signedUrl)
+  }
+
+  // --- PRZYGOTOWANIE DANYCH DO BAZY ---
+  const payload = { email: currentUser.email }
+  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
+  if (plikUrls.length) payload.plik = plikUrls.join(',')
+
+  const { error } = await supabase.from('tabela_elektrykow').upsert(payload, { onConflict: 'email' })
+
+  loading.style.display = 'none'
+
+  if (error) {
+    result.textContent = error.message
+    result.className = 'error'
+    const { data: { user } } = await supabase.auth.getUser()
+console.log('USER:', user)
+  } else {
+    // --- WYŚLIJ MAGIC EMAIL ---
+    await wyslijMagicEmail(currentUser.email)
+
+    // --- PRZEKIEROWANIE po sukcesie ---
+    window.location.href = 'https://orep.pl/logowanie';
+  }
+})
 </script>
 </body>
 </html>
