--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -184,60 +184,29 @@ const supabase = createClient(
 )
 
 let currentUser = null
-
-const fields = [
-  'imie','nazwisko','miasto','wojewodztwo',
-  'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
-]
+const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
 
 async function loadWojewodztwa(selectedWoj = null) {
-  const { data, error } = await supabase
-    .from('wojewodztwa')
-    .select('id, nazwa')
-    .order('nazwa')
+  const { data, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa')
   if (error) { console.error('Błąd ładowania województw:', error); return }
-
   const wojSelect = document.getElementById('wojewodztwo')
   wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
-  data.forEach(w => {
-    const option = document.createElement('option')
-    option.value = w.id
-    option.textContent = w.nazwa
-    wojSelect.appendChild(option)
-  })
-  if (selectedWoj) {
-    wojSelect.value = selectedWoj
-    wojSelect.dispatchEvent(new Event('change'))
-  }
+  data.forEach(w => { const option = document.createElement('option'); option.value = w.id; option.textContent = w.nazwa; wojSelect.appendChild(option) })
+  if (selectedWoj) { wojSelect.value = selectedWoj; wojSelect.dispatchEvent(new Event('change')) }
 }
 
 document.getElementById('wojewodztwo').addEventListener('change', async function() {
   const wojId = this.value
   const miastoSelect = document.getElementById('miasto')
-  if (!wojId) {
-    miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-    miastoSelect.disabled = true
-    return
-  }
-  const { data, error } = await supabase
-    .from('miasta')
-    .select('id, nazwa')
-    .eq('wojewodztwo_id', wojId)
-    .order('nazwa')
+  if (!wojId) { miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'; miastoSelect.disabled = true; return }
+  const { data, error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
   if (error) { console.error('Błąd ładowania miast:', error); return }
   miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-  data.forEach(m => {
-    const option = document.createElement('option')
-    option.value = m.id
-    option.textContent = m.nazwa
-    miastoSelect.appendChild(option)
-  })
+  data.forEach(m => { const option = document.createElement('option'); option.value = m.id; option.textContent = m.nazwa; miastoSelect.appendChild(option) })
   miastoSelect.disabled = false
 })
 
-document.getElementById('close-btn').addEventListener('click', () => {
-  window.location.href = 'https://orep.pl/';
-})
+document.getElementById('close-btn').addEventListener('click', () => { window.location.href = 'https://orep.pl/'; })
 
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
@@ -245,77 +214,67 @@ document.addEventListener('DOMContentLoaded', async () => {
   currentUser = user
   email.value = user.email
 
-  const { data } = await supabase
-    .from('tabela_elektrykow')
-    .select('*')
-    .eq('email', user.email)
-    .single()
-
+  const { data } = await supabase.from('tabela_elektrykow').select('*').eq('email', user.email).single()
   if (data) {
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
     fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
     if (data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
     if (data.miasto) document.getElementById('miasto').value = data.miasto
-  } else {
-    loadWojewodztwa()
-  }
+  } else { loadWojewodztwa() }
 })
 
-// --- FUNKCJA WYSYŁAJĄCA MAGIC EMAIL ---
 async function wyslijMagicEmail(email) {
   try {
     const res = await fetch('https://orep.pl/api/magic-mail', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email })
-    });
-    const data = await res.json();
-    if (!data.ok) {
-      console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd');
-    }
-  } catch(err) {
-    console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err);
-  }
+      method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ email })
+    })
+    const data = await res.json()
+    if (!data.ok) console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd')
+  } catch(err) { console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err) }
 }
 
-// --- OBSŁUGA SUBMIT FORMULARZA ---
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
   loading.style.display = 'block'
   result.textContent = ''
   result.className = ''
 
+  // --- WALIDACJA nrE / nrEPomiary / nrD ---
+  if (nrE.value && nrEPomiary.value) { loading.style.display='none'; result.textContent='Wybierz tylko jeden rodzaj eksploatacji'; result.className='error'; return }
+  if (nrD.value && !nrEPomiary.value) { loading.style.display='none'; result.textContent='Do DOZORU wymagane są pomiary'; result.className='error'; return }
+
+  // --- WALIDACJA PLIKU ---
+  const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png'], maxSize=5*1024*1024
+  for(let i=0;i<plik.files.length;i++){ const file=plik.files[i]; if(!allowedTypes.includes(file.type)){ loading.style.display='none'; result.textContent='Nieprawidłowy typ pliku. Dozwolone: PDF, JPG, PNG'; result.className='error'; return }
+  if(file.size>maxSize){ loading.style.display='none'; result.textContent='Plik zbyt duży. Maksymalny rozmiar: 5 MB'; result.className='error'; return } }
+
+  // --- UPLOAD PLIKÓW ---
+  let plikUrls=[]
+  for(let i=0;i<plik.files.length;i++){
+    const file=plik.files[i]
+    const path=`${currentUser.id}/${Date.now()}_${file.name}`
+    const { error: uploadError } = await supabase.storage.from('uprawnienia').upload(path,file,{upsert:true})
+    if(uploadError){ loading.style.display='none'; result.textContent='Błąd wysyłania pliku: '+uploadError.message; result.className='error'; return }
+    const { data: urlData, error: urlError } = await supabase.storage.from('uprawnienia').createSignedUrl(path,3600)
+    if(urlError){ loading.style.display='none'; result.textContent='Błąd generowania linku do pliku'; result.className='error'; return }
+    plikUrls.push(urlData.signedUrl)
+  }
+
+  // --- PRZYGOTOWANIE DANYCH ---
   const payload = { email: currentUser.email }
-  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
+  fields.forEach(f=>payload[f]=document.getElementById(f).value.trim())
+  if(plikUrls.length) payload.plik = plikUrls.join(',')
 
-  // --- SPRAWDZENIE CZY REKORD ISTNIEJE ---
-  const { data: existing } = await supabase
-    .from('tabela_elektrykow')
-    .select('id')
-    .eq('email', currentUser.email)
-    .single()
-
+  // --- SPRAWDZENIE CZY ISTNIEJE ---
+  const { data: existing } = await supabase.from('tabela_elektrykow').select('id').eq('email',currentUser.email).single()
   let error
-  if (existing) {
-    // UPDATE
-    const { error: updateErr } = await supabase.from('tabela_elektrykow').update(payload).eq('id', existing.id)
-    error = updateErr
-  } else {
-    // INSERT
-    const { error: insertErr } = await supabase.from('tabela_elektrykow').insert(payload)
-    error = insertErr
-  }
+  if(existing){ const { error: updateErr } = await supabase.from('tabela_elektrykow').update(payload).eq('id', existing.id); error=updateErr }
+  else{ const { error: insertErr } = await supabase.from('tabela_elektrykow').insert(payload); error=insertErr }
 
-  loading.style.display = 'none'
-
-  if (error) {
-    result.textContent = error.message
-    result.className = 'error'
-  } else {
-    await wyslijMagicEmail(currentUser.email)
-    window.location.href = 'https://orep.pl/logowanie';
-  }
+  loading.style.display='none'
+  if(error){ result.textContent=error.message; result.className='error' }
+  else{ await wyslijMagicEmail(currentUser.email); window.location.href='https://orep.pl/logowanie'; }
 })
 </script>
 </body>
