--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -2,270 +2,236 @@
 <html lang="pl">
 <head>
 <meta name="robots" content="noindex, nofollow">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rejestracja – OREP</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Rejestracja – OREP</title>
 
-  <!-- Supabase JS CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!-- Supabase JS CDN -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+<style>
+* { box-sizing: border-box; margin: 0; padding: 0; }
 
-    body {
-      font-family: Arial, sans-serif;
-      background: #000;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      min-height:100vh;
-      padding:20px;
-    }
+body {
+  font-family: Arial, sans-serif;
+  background: #000;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  padding:20px;
+}
 
-    .wrapper{
-      position: relative;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      background:#e2e6ea;
-      padding:40px 20px;
-      border-radius:12px;
-      box-shadow:0 4px 20px rgba(0,0,0,0.1);
-      border:20px solid white;
-      max-width:500px;
-      width:100%;
-      text-align:center;
-    }
+.wrapper{
+  position: relative;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  background:#e2e6ea;
+  padding:40px 20px;
+  border-radius:12px;
+  box-shadow:0 4px 20px rgba(0,0,0,0.1);
+  border:20px solid white;
+  max-width:500px;
+  width:100%;
+  text-align:center;
+}
 
-    /* X w rogu */
-    .close-x {
-      position:absolute;
-      top:8px;
-      right:12px;
-      font-size:22px;
-      font-weight:bold;
-      cursor:pointer;
-      color: #ff0000;
-      user-select:none;
-    }
+.close-x {
+  position:absolute;
+  top:8px;
+  right:12px;
+  font-size:22px;
+  font-weight:bold;
+  cursor:pointer;
+  color:#ff0000;
+  user-select:none;
+}
 
-    .close-x:hover {
-      color:#000;
-    }
+.close-x:hover {
+  color:#000;
+}
 
-    .form-container{
-      width:100%;
-      background:#fff;
-      padding:25px 20px;
-      border-radius:8px;
-      box-shadow:0 2px 10px rgba(0,0,0,0.05);
-      border:2px solid blue;
-    }
+.form-container{
+  width:100%;
+  background:#fff;
+  padding:25px 20px;
+  border-radius:8px;
+  box-shadow:0 2px 10px rgba(0,0,0,0.05);
+  border:2px solid blue;
+}
 
-    h2 {
-      margin-bottom:20px;
-    }
+h2 {
+  margin-bottom:20px;
+}
 
-    input[type="email"],
-    input[type="password"] {
-      width:100%;
-      padding:12px 15px;
-      margin-bottom:15px;
-      border:1px solid #ccc;
-      border-radius:6px;
-      font-size:16px;
-    }
+input[type="email"],
+input[type="password"] {
+  width:100%;
+  padding:12px 15px;
+  margin-bottom:15px;
+  border:1px solid #ccc;
+  border-radius:6px;
+  font-size:16px;
+}
 
-    button {
-      width:100%;
-      min-height:48px;
-      border:none;
-      border-radius:6px;
-      font-size:16px;
-      cursor:pointer;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:0;
-      line-height:1;
-    }
+button {
+  width:100%;
+  min-height:48px;
+  border:none;
+  border-radius:6px;
+  font-size:16px;
+  cursor:pointer;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
 
-    .btn-submit {
-      background-color:#2b6cb0;
-      color:white;
-      font-weight:600;
-    }
+.btn-submit {
+  background-color:#2b6cb0;
+  color:white;
+  font-weight:600;
+}
 
-    .btn-secondary {
-      background:#008000;
-      color:#fff;
-      border:1px solid #fff;
-    }
+.btn-secondary {
+  background:#008000;
+  color:#fff;
+}
 
-    .btn-logout {
-      background:#ff0000;
-      color:#fff;
-      margin-top:10px;
-    }
+.btn-logout {
+  background:#ff0000;
+  color:#fff;
+  margin-top:10px;
+}
 
-    .actions {
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-    }
+.actions {
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+}
 
-    .hidden {
-      display:none !important;
-    }
+.hidden {
+  display:none !important;
+}
 
-    .log {
-      margin-top:15px;
-      font-size:14px;
-      color:#333;
-      word-break:break-word;
-      min-height:20px;
-    }
-  </style>
+.log {
+  margin-top:15px;
+  font-size:14px;
+  color:#333;
+  word-break:break-word;
+  min-height:20px;
+}
+</style>
 </head>
 
 <body>
 
-  <div class="wrapper">
+<div class="wrapper">
 
-    <!-- X – tylko zamyka, NIE wylogowuje -->
-    <div class="close-x" onclick="closeOnly()">✕</div>
+  <div class="close-x" onclick="closeOnly()">✕</div>
 
-    <div class="form-container">
-      <h2>Logowanie / Rejestracja</h2>
+  <div class="form-container">
+    <h2>Logowanie / Rejestracja</h2>
 
-      <input type="email" id="emailInput" placeholder="Twój adres e-mail" />
-      <input type="password" id="passwordInput" placeholder="Hasło (min. 8 znaków)" />
+    <input type="email" id="emailInput" placeholder="Twój adres e-mail" />
+    <input type="password" id="passwordInput" placeholder="Hasło (min. 8 znaków)" />
 
-      <div class="actions" id="authActions">
-        <button class="btn-submit" id="signupBtn">Zarejestruj</button>
-        <button class="btn-secondary" id="loginBtn">Zaloguj</button>
-      </div>
-
-      <button id="logoutBtn" class="btn-logout hidden">
-        Wyloguj
-      </button>
-
-      <div class="log" id="log"></div>
+    <div class="actions" id="authActions">
+      <button class="btn-submit" id="signupBtn">Zarejestruj</button>
+      <button class="btn-secondary" id="loginBtn">Zaloguj</button>
     </div>
+
+    <button id="logoutBtn" class="btn-logout hidden">
+      Wyloguj
+    </button>
+
+    <div class="log" id="log"></div>
   </div>
+</div>
 
-  <script>
-    const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
-    const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+<script>
+const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
 
-    document.addEventListener('DOMContentLoaded', async () => {
-      const emailInput = document.getElementById('emailInput');
-      const passwordInput = document.getElementById('passwordInput');
-      const signupBtn = document.getElementById('signupBtn');
-      const loginBtn = document.getElementById('loginBtn');
-      const logoutBtn = document.getElementById('logoutBtn');
-      const authActions = document.getElementById('authActions');
-      const log = document.getElementById('log');
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-      // Sprawdzenie, czy użytkownik już jest zalogowany
-      try {
-        const { data } = await sb.auth.getUser();
-        if (data?.user) {
-          window.location.href = '/rejestracja_formularz';
-        }
-      } catch (err) {
-        console.error(err);
-      }
+document.addEventListener('DOMContentLoaded', () => {
+  const emailInput = document.getElementById('emailInput');
+  const passwordInput = document.getElementById('passwordInput');
+  const signupBtn = document.getElementById('signupBtn');
+  const loginBtn = document.getElementById('loginBtn');
+  const logoutBtn = document.getElementById('logoutBtn');
+  const log = document.getElementById('log');
 
-      // Rejestracja
-      signupBtn.onclick = async () => {
-        const email = emailInput.value.trim();
-        const password = passwordInput.value;
+  // REJESTRACJA
+  signupBtn.onclick = async () => {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value;
 
-        if (!email) {
-          log.innerText = "❌ Podaj poprawny adres e-mail";
-          return;
-        }
-        if (!password || password.length < 8) {
-          log.innerText = "❌ Hasło musi mieć minimum 8 znaków";
-          return;
-        }
-
-        log.innerText = "⏳ Trwa rejestracja...";
-        try {
-          const { data, error } = await sb.auth.signUp({ email, password });
-          if (error) {
-            if (error.message.includes("User already registered")) {
-              log.innerText = "❌ Użytkownik o tym adresie e-mail już istnieje";
-            } else if (error.message.includes("Invalid email")) {
-              log.innerText = "❌ Nieprawidłowy adres e-mail";
-            } else if (error.message.includes("Password should be at least")) {
-              log.innerText = "❌ Hasło musi mieć minimum 8 znaków";
-              
-            } else if (error.message.includes("rate limit")) {
-              log.innerText = "❌ Wysłano zbyt wiele prób logowania. Spróbuj ponownie za kilka minut...";
-            } else {
-              log.innerText = "❌ " + error.message;
-            }
-            return;
-          }
-          if (data?.user) {
-            window.location.href = '/rejestracja_formularz';
-          } else {
-            log.innerText = "✅ Rejestracja zakończona. Sprawdź e-mail i potwierdź konto.";
-          }
-        } catch {
-          log.innerText = "❌ Wystąpił błąd podczas rejestracji";
-        }
-      };
-
-      // Logowanie
-      loginBtn.onclick = async () => {
-        const email = emailInput.value.trim();
-        const password = passwordInput.value;
-
-        if (!email) {
-          log.innerText = "❌ Podaj adres e-mail";
-          return;
-        }
-        if (!password) {
-          log.innerText = "❌ Podaj hasło";
-          return;
-        }
-
-        log.innerText = "⏳ Trwa logowanie...";
-        try {
-          const { data, error } = await sb.auth.signInWithPassword({ email, password });
-          if (error) {
-            if (error.message.includes("Invalid login credentials")) {
-              log.innerText = "❌ Nieprawidłowy e-mail lub hasło";
-            } else if (error.message.includes("Email not confirmed")) {
-              log.innerText = "❌ Konto nie zostało jeszcze potwierdzone e-mailem";
-            } else {
-              log.innerText = "❌ " + error.message;
-            }
-            return;
-          }
-          if (data?.user) {
-            window.location.href = '/rejestracja_formularz';
-          }
-        } catch {
-          log.innerText = "❌ Wystąpił błąd podczas logowania";
-        }
-      };
-
-      // Wylogowanie
-      logoutBtn.onclick = async () => {
-        await sb.auth.signOut();
-        window.location.href = '/';
-      };
-    });
-
-    // Tylko zamknięcie strony
-    function closeOnly() {
-      window.location.href = "/";
+    if (!email) {
+      log.innerText = "❌ Podaj poprawny adres e-mail";
+      return;
     }
-  </script>
+    if (!password || password.length < 8) {
+      log.innerText = "❌ Hasło musi mieć minimum 8 znaków";
+      return;
+    }
+
+    log.innerText = "⏳ Trwa rejestracja...";
+    const { data, error } = await sb.auth.signUp({ email, password });
+
+    if (error) {
+      if (error.message.includes("User already registered")) {
+        log.innerText = "❌ Użytkownik o tym adresie e-mail już istnieje";
+      } else if (error.message.includes("rate limit")) {
+        log.innerText = "❌ Zbyt wiele prób. Spróbuj ponownie później";
+      } else {
+        log.innerText = "❌ " + error.message;
+      }
+      return;
+    }
+
+    if (data?.user) {
+      window.location.href = "/rejestracja_formularz";
+    } else {
+      log.innerText = "✅ Sprawdź e-mail i potwierdź konto";
+    }
+  };
+
+  // LOGOWANIE – TYLKO PO KLIKNIĘCIU
+  loginBtn.onclick = async () => {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value;
+
+    if (!email || !password) {
+      log.innerText = "❌ Podaj e-mail i hasło";
+      return;
+    }
+
+    log.innerText = "⏳ Trwa logowanie...";
+    const { data, error } = await sb.auth.signInWithPassword({ email, password });
+
+    if (error) {
+      log.innerText = "❌ Nieprawidłowy e-mail lub hasło";
+      return;
+    }
+
+    if (data?.user) {
+      window.location.href = "/rejestracja_formularz";
+    }
+  };
+
+  // WYLOGOWANIE
+  logoutBtn.onclick = async () => {
+    await sb.auth.signOut();
+    window.location.href = "/";
+  };
+});
+
+function closeOnly() {
+  window.location.href = "/";
+}
+</script>
+
 </body>
 </html>
