--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -185,7 +185,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     return
   }
 
-  const emailType = isUpdate ? 'update' : 'welcome'
+  const emailType = isUpdate ? 'aktualizacja' : 'rejestracja'
 
   try {
     const res = await fetch(
