--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -327,7 +327,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     },
   body: JSON.stringify({
   email: currentUser.email,
-  name: document.getElementById('imie').value
+  name: document.getElementById('imie,nazwisko').value
     })
   }
 )
